[project]
name = "app-webradio"
version = "0.1.0"
description = "App player Webradio"
authors = [
    {name = "PauloDev13",email = "devpgm2020@gmail.com"}
]
license = {text = "free"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "requests (>=2.32.4,<3.0.0)",
    "flet-audio (>=0.1.0,<0.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false